Creando nueva carpeta images

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <div class="collapse navbar-collapse" id="navbar-nav">
         <a class="navbar-brand" href="#">
-          <img src="Imagenes/Icono_data.png" width="44" height="44" alt="Logo FR">
+          <img src="images/Icono_data.png" width="44" height="44" alt="Logo FR">
         </a>
 
         <ul class="navbar-nav d-flex justify-content-center align-items-center ms-2 gap-2">
@@ -78,7 +78,7 @@
   <!-- Hero -->
   <header class="hero align-items-stretch">
     <div class="hero-principal d-flex flex-column justify-content-center align-items-center text-center">
-      <img class="hero-imagen" src="Imagenes/foto_cv.jpg" alt="Foto de Fernando Robles">
+      <img class="hero-imagen" src="images/foto_cv.jpg" alt="Foto de Fernando Robles">
       <h1 data-i18n="hero.hi">Hola, soy Fernando</h1>
       <h2 data-i18n="hero.role">Data Analyst & Business Intelligence</h2>
       <p data-i18n="hero.pitch">Transformo datos en decisiones de negocio con <strong>Power BI</strong>, <strong>SQL</strong> y <strong>Python</strong>. KPI storytelling + pipelines simples en <strong>BigQuery</strong>.</p>
@@ -88,7 +88,7 @@
       </div>
     </div>
     <div class="hero-inferior">
-      <img class="hero-grafico img-fluid" src="Imagenes/notebook_dashboard.webp" alt="Ilustración analítica">
+      <img class="hero-grafico img-fluid" src="images/notebook_dashboard.webp" alt="Ilustración analítica">
     </div>
   </header>
 
@@ -156,7 +156,7 @@
         <!-- Biogenesys -->
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card h-100 shadow-sm">
-            <img src="imagenes/Biogenesys.png" class="card-img-top" alt="Dashboard Biogenesys">
+            <img src="images/Biogenesys.png" class="card-img-top" alt="Dashboard Biogenesys">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title" data-i18n="projects.biogenesys.title">Biogenesys — Salud LATAM</h5>
               <ul class="small mb-3">
@@ -173,7 +173,7 @@
         <!-- NBA-StatVision -->
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card h-100 shadow-sm">
-            <img src="imagenes/Nba.png"card-img-top" alt="Dashboard NBA-StatVision">
+            <img src="images/Nba.png"card-img-top" alt="Dashboard NBA-StatVision">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title" data-i18n="projects.nba.title">NBA-StatVision — Deportes</h5>
               <ul class="small mb-3">
@@ -190,7 +190,7 @@
         <!-- Senda Café -->
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card h-100 shadow-sm">
-            <img src="imagenes/Logo_café.png" class="card-img-top" alt="Dashboard Senda Café">
+            <img src="images/Logo_café.png" class="card-img-top" alt="Dashboard Senda Café">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title" data-i18n="projects.senda.title">Senda Café — Retail</h5>
               <ul class="small mb-3">
@@ -211,7 +211,7 @@
         <!-- Adventure Works -->
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card h-100 shadow-sm">
-            <img src="imagenes/adventure works.jpg" class="card-img-top" alt="Adventure Works">
+            <img src="images/adventure works.jpg" class="card-img-top" alt="Adventure Works">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title" data-i18n="projects.adventure.title">Adventure Works</h5>
               <ul class="small mb-3">
@@ -228,7 +228,7 @@
         <!-- Partners Systems -->
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card h-100 shadow-sm">
-            <img src="imagenes/dashboard-partners.png" class="card-img-top" alt="Dashboard Partners">
+            <img src="images/dashboard-partners.png" class="card-img-top" alt="Dashboard Partners">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title" data-i18n="projects.partners.title">Partners Systems — Dashboard</h5>
               <ul class="small mb-3">
@@ -242,7 +242,7 @@
             </div>
           </div>
         </div>
-      </div> e
+      </div> 
 
       <!-- CTA a todos los repos -->
       <div class="text-center mt-4">
