Agregando boton de AppWEb en Sistemas de partners2

--- a/index.html
+++ b/index.html
@@ -238,9 +238,8 @@
               </ul>
               <div class="mt-auto">
                 <a href="https://github.com/ferroblesmdq12/simiai-ds-tech-challenge" target="_blank" class="btn btn-outline-dark btn-sm me-2"><i class="bi bi-github"></i> Repo</a>
-                <a href="https://dashboard-partners.streamlit.app/" target="_blank" class="btn btn-outline-dark btn-sm me-2"><i class="bi bi-github"></i> Dashboard App Web </a>
-              </div>
-            </div>
+                <a href="https://dashboard-partners.streamlit.app/" class="btn btn-primary me-2" data-i18n="cta.partners">Dashboard App Web </a>
+            </div> 
           </div>
         </div>
       </div> 
