--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <!-- Biogenesys -->
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card h-100 shadow-sm">
-            <img src="Imagenes/Biogenesys.PNG" class="card-img-top" alt="Dashboard Biogenesys">
+            <img src="images/Biogenesys.png" class="card-img-top" alt="Dashboard Biogenesys">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title" data-i18n="projects.biogenesys.title">Biogenesys — Salud LATAM</h5>
               <ul class="small mb-3">
